// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationPrompt Snapshots should render the NotificationDialog when state is present 1`] = `
<ContextProvider
  value={
    Object {
      "registerPrompt": [Function],
      "unregisterPrompt": [Function],
    }
  }
>
  <NotificationDialog
    acceptAction={
      Object {
        "isEmphasized": true,
        "onClick": [Function],
        "text": "Accept",
      }
    }
    content={null}
    endMessage={null}
    isOpen={true}
    rejectAction={
      Object {
        "isEmphasized": false,
        "onClick": [Function],
        "text": "Reject",
      }
    }
    startMessage="Test Message"
    title="Test Title"
    variant="warning"
  />
</ContextProvider>
`;

exports[`NavigationPrompt Snapshots should render the NotificationDialog with accept as the primary action 1`] = `
<ContextProvider
  value={
    Object {
      "registerPrompt": [Function],
      "unregisterPrompt": [Function],
    }
  }
>
  <NotificationDialog
    acceptAction={
      Object {
        "isEmphasized": true,
        "onClick": [Function],
        "text": "Accept",
      }
    }
    content={null}
    endMessage={null}
    isOpen={true}
    rejectAction={
      Object {
        "isEmphasized": false,
        "onClick": [Function],
        "text": "Reject",
      }
    }
    startMessage="Test Message"
    title="Test Title"
    variant="warning"
  />
</ContextProvider>
`;

exports[`NavigationPrompt Snapshots should render the NotificationDialog with reject as the primary action 1`] = `
<ContextProvider
  value={
    Object {
      "registerPrompt": [Function],
      "unregisterPrompt": [Function],
    }
  }
>
  <NotificationDialog
    acceptAction={
      Object {
        "isEmphasized": true,
        "onClick": [Function],
        "text": "Reject",
      }
    }
    content={null}
    endMessage={null}
    isOpen={true}
    rejectAction={
      Object {
        "isEmphasized": false,
        "onClick": [Function],
        "text": "Accept",
      }
    }
    startMessage="Test Message"
    title="Test Title"
    variant="warning"
  />
</ContextProvider>
`;

exports[`NavigationPrompt Snapshots should render with children 1`] = `
<ContextProvider
  value={
    Object {
      "registerPrompt": [Function],
      "unregisterPrompt": [Function],
    }
  }
>
  <withPromptRegistration(MockPromptBase) />
</ContextProvider>
`;

exports[`NavigationPrompt Snapshots should render with minimal props 1`] = `
<ContextProvider
  value={
    Object {
      "registerPrompt": [Function],
      "unregisterPrompt": [Function],
    }
  }
/>
`;
